Fixed BTM-30: added support for all primitive types